bugfixes spacing

--- a/css/index.css
+++ b/css/index.css
@@ -308,6 +308,15 @@ footer {
 
 
 @media only screen and (max-width: 1100px) {
+    .pf-wrapper, .pf-flex-wrapper, .pf-about, .mycart2, .c-rev-mobile {
+        flex-direction: column-reverse;
+    }
+    .pf-about-box {
+        margin-left: 0;
+    }
+    .pf-txt {
+        margin-right: 0px;
+    }
     .header ul li a {
         font-size: 18px;
     }
@@ -344,15 +353,12 @@ footer {
     .header img.cart {
         width: 30px;
     }
-    .pf-wrapper, .pf-flex-wrapper, .pf-about, .mycart2, .c-rev-mobile {
-        flex-direction: column-reverse;
-    }
+
 
     .pf-rj2, .mycart1{
         flex-direction: column;
     }
     .pf-txt {
-        margin-right: 0;
         width: 100%;
     }
     .pf-about-box {
@@ -364,6 +370,7 @@ footer {
     }
     .profile-box a {
         padding: 18px 12px;
+        margin-right: 20px;
     }
     h1 {
         font-size: 32px;    
